@@ -1,0 +1,43 @@
+# Copyright (C) 2021 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+# Test that a rustc-produced .debug_aranges can be read.
+
+load_lib rust-support.exp
+if {[skip_rust_tests]} {
+    continue
+}
+
+standard_testfile .rs
+
+if {[prepare_for_testing "failed to prepare" $testfile $srcfile {debug rust}]} {
+    return -1
+}
+
+if {[ensure_gdb_index $binfile "-dwarf-5"] == -1} {
+    return -1
+}
+
+gdb_exit
+gdb_start
+set testname "file with aranges"
+gdb_test_multiple "file $binfile" "" {
+    -re "warning: Section \\.debug_aranges" {
+	fail $testname
+    }
+    -re -wrap ".*" {
+	pass $testname
+    }
+}
