@@ -1,5 +1,10 @@
 2021-06-25  Tom Tromey  <tom@tromey.com>
 
+	* dwarf2/read.c (create_addrmap_from_aranges): Change padding
+	logic.
+
+2021-06-25  Tom Tromey  <tom@tromey.com>
+
 	* dwarf2/read.c (process_psymtab_comp_unit): Don't set 'lang'.
 	(scan_partial_symbols, partial_die_parent_scope)
 	(add_partial_symbol, add_partial_subprogram)
